# Novel-to-Screenplay

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
.qoder/repowiki/knowledge/zh/: _index.yaml
.qoder/repowiki/knowledge/zh/AI 驱动的小说转剧本自动化系统/: _module.yaml  技术栈.md  架构设计.md  概述.md  特殊配置与命令.md  编码规范.md
.qoder/repowiki/zh/content/: 快速开始.md  配置管理.md
.qoder/repowiki/zh/content/API参考文档/: API参考文档.md  Web界面端点.md  文件上传端点.md  结果下载端点.md  转换启动端点.md  进度监控端点.md  验证结果端点.md
.qoder/repowiki/zh/content/LLM集成/: LLM客户端实现.md  LLM集成.md  提示工程设计.md  结构化输出处理.md  错误处理与重试机制.md
.qoder/repowiki/zh/content/前端界面/: JavaScript交互逻辑.md  前端界面.md  样式设计.md  模板系统.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
app/: config.py  dependencies.py  main.py
app/api/: routes.py
app/models/: enums.py  requests.py  screenplay.py
app/prompts/: chapter_detection.py  character_extraction.py  continuity.py  regeneration.py  screenplay_conversion.py
app/services/: assembler.py  chapter_splitter.py  character_extractor.py  converter.py  file_parser.py  llm_client.py  validator.py  yaml_exporter.py
app/static/css/: app.css
app/static/js/: conversion.js  editor.js  preview.js  samples.js  upload.js
app/templates/: base.html  index.html  preview.html
data/samples/: sample1_三国演义草船借箭.md  sample2_西游记三打白骨精.md  sample3_鲁迅祝福.md
docs/: DEPLOYMENT.md  YAML_SCHEMA.md
tests/: conftest.py  test_assembler.py  test_chapter_splitter.py  test_file_parser.py  test_models.py  test_validator.py  test_yaml_exporter.py
tests/fixtures/: sample_novel.txt
(+48 files in other folders)
