[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "novel-to-screenplay"
version = "1.0.0"
description = "AI-powered tool to convert novel text into structured YAML screenplays"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "python-docx>=1.1",
    "pdfplumber>=0.11",
    "openai>=1.40",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "ruamel.yaml>=0.18",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
novel-serve = "app.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "live: tests that call the real DeepSeek API",
]

[tool.ruff]
target-version = "py310"
line-length = 120
